TAG: annotload-5-1-5-1
DATE: 12/02/2013
STAFF: dbm
CHANGES:
1) TR11475: shell "-x" cleanup

TAG: annotload-5-1-4-1
DATE: 07/01/2013
STAFF: lec
CHANGES: from scrum-dog/Sybase 15 testing
- changed "-f -x" to "-fx" for solaris/linux
this command will work for both platforms

TAG: annotload-5-1-2-1 
DATE: 04/01/2013
STAFF: sc
CHANGES: merge tr6519 changes to the trunk

TAG: annotload-tr6519-3
DATE: 03/18/2013
STAFF: sc
CHANGES: N2MO/TR6510
1) removed entryDate from goahuman and gorat 

TAG: annotload-tr6519-2
DATE: 02/26/2013
STAFF: sc
CHANGES: N2MO/TR6510 
1) new parameter for goratload

TAG: annotload-tr6519-1
DATE: 02/18/2013
STAFF: sc
CHANGES: N2MO/TR6510 branch point tag
1) new parameter for goahumanload

TAG: annotload-5-1-1-4
DATE: 01/06/2013
STAFF: sc
CHANGES: Fixed bug whereby bcp is skipped if processMcvFile is called

TAG: annotload-5-1-1-3
TAG: annotload-5-1-1-2
TAG: annotload-5-1-1-1
DATE: 12/27/2012
STAFF: lec
CHANGES:
a) TR10273/added MP

TAG: annotload-tr10273-2
TAG: annotload-tr10273-1
DATE: 09/18/2012
STAFF: lec
CHANGES:
a) TR10273/add 'isMP' option/createEvidenceRecord()

TAG: annotload-tr10273-BP
DATE: 09/17/2012
STAFF: lec
CHANGES: branch point tag - TR10273/sangermpload

TAG: annotload-4-4-1-2
TAG: annotload-4-4-1-1
DATE: 02/21/2010
STAFF: lec
CHANGES:
1) merge TR10044 branch to trunk

TAG: annotload-tr10044-6
TAG: annotload-tr10044-5
TAG: annotload-tr10044-4
DATE: 02/16/2010
STAFF: lec
CHANGES:
1) annotload.py
   moved variable 'properties'
   from line 1039 to line 1031
2) added some blank lines for more read-abilty

TAG: annotload-tr10044-3
DATE: 02/11/2010
STAFF: sc
CHANGES:
1) annotload.py  - max columns 80 so easy to read
   ANNOTPROPERTY optional

TAG: annotload-tr10044-2
TAG: annotload-tr10044-1
DATE: 12/02/2010
STAFF: lec
CHANGES: removed goa.config, goa.py/these have been moved to goaload

TAG: annotload-tr10044-BP
DATE: 12/01/2010
STAFF: lec
CHANGES: branch point tag - TR10044/go notes

TAG: annotload-4-4-0-5
TAG: annotload-4-4-0-4