@@ -1,3 +1,9 @@
+TAG: annotload-5-1-6-1
+DATE: 01/05/2014
+STAFF: lec
+CHANGES:
+1) TR11518/add 'isGOAmouse'
+
 TAG: annotload-5-1-5-1
 DATE: 12/02/2013
 STAFF: dbm
